<resources>
    <string name="app_name">Catch Phrase</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_screen">MenuScreen</string>

    <string name="menuText">Welcome to Catch Phrase \n Press Play to start!</string>

    <string name="play">Play</string>
    <string name="btconnect">Connect to Device</string>
    <string name="exit">Exit</string>
    <string name="rules">Rules</string>
    <string name="gotit">Got It!</string>
    <string name="rulescontent">Here are the rules</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="winner">Winner</string>
    <string name="yay">Yay!</string>
    <string name="reset">Reset</string>
    <string name="ok">Ok</string>
    <string-array name="wordsList">
        <item>Horse</item>
        <item>Hose</item>
        <item>Truck</item>
        <item>Party</item>
        <item>Computer</item>
        <item>Tree</item>
        <item>Oranges</item>
        <item>Forest</item>
        <item>fire</item>
        <item>Dice</item>
        <item>Poker</item>
    </string-array>

</resources>
