<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="batallatech.catchphrase.MenuScreen">

    <TextView android:text="@string/menuText" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:id="@+id/menuIntroText"
        android:textSize="28sp"
        android:gravity="center"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:gravity="center"
        android:layout_below="@+id/menuIntroText"
        android:layout_centerHorizontal="true">

        <Button
            style="@style/menuButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:id="@+id/menuPlayButton" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/btconnect"
            android:id="@+id/menuConnectButton"
            style="@style/menuButtonStyle" />

        <Button
            style="@style/menuButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:id="@+id/menuRules" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/leaderboard"
            android:id="@+id/leaderboardButton"
            style="@style/menuButtonStyle" />

        <Button
            style="@style/menuButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:id="@+id/menuExit" />
    </LinearLayout>

</RelativeLayout>
